// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input should render correctly 1`] = `
<div
  className="jsx-__scopedHash input"
>
  <JSXStyle
    css="__scoped"
    styleId="__scopedHash"
  />
  <span
    className="jsx-__scopedHash input__label"
  >
    label
  </span>
  <input
    className="jsx-__scopedHash input__field"
    name="input"
    onChange={[Function]}
    type="text"
  />
  <div
    className="jsx-__scopedHash input__error"
  />
</div>
`;

exports[`Input should render correctly with number 1`] = `
<div
  className="jsx-__scopedHash input"
>
  <JSXStyle
    css="__scoped"
    styleId="__scopedHash"
  />
  <span
    className="jsx-__scopedHash input__label"
  >
    label
  </span>
  <[object Object]
    allowEmptyFormatting={false}
    allowNegative={true}
    className="input__field"
    decimalScale={4}
    decimalSeparator="."
    displayType="input"
    fixedDecimalScale={true}
    getInputRef={[Function]}
    isAllowed={[Function]}
    isNumericString={true}
    name="input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    onKeyDown={[Function]}
    onMouseUp={[Function]}
    onValueChange={[Function]}
    prefix=""
    suffix=""
    type="text"
  />
  <div
    className="jsx-__scopedHash input__error"
  />
</div>
`;
